--- a/domain.yml
+++ b/domain.yml
@@ -1,37 +1,46 @@
 version: "3.1"
-session_config:
-  session_expiration_time: 0
-  carry_over_slots_to_new_session: true
-intents:
-- check_human
-- transfer_money:
-    use_entities: []
-- inform
-- pay_cc:
-    use_entities: []
-- greet
-- goodbye
-- affirm
-- deny
-- thankyou
-- ask_transfer_charge
-- search_transactions:
-    use_entities: []
-- check_balance:
-    use_entities:
+actions:
+- action_session_start
+- action_restart
+- action_show_balance
+- action_show_recipients
+- action_show_transfer_charge
+- action_handoff
+- action_handoff_options
+- action_pay_cc
+- action_transfer_money
+- action_transaction_search
+- action_ask_transaction_search_form_zz_confirm_form
+- action_switch_forms_ask
+- action_switch_forms_deny
+- action_switch_forms_affirm
+- action_switch_back_ask
+- validate_cc_payment_form
+- validate_transfer_money_form
+- validate_transaction_search_form
+forms:
+  cc_payment_form:
+    ignored_intents: []
+    required_slots:
+    - AA_CONTINUE_FORM
     - credit_card
-    - account_type
-- check_earnings:
-    use_entities: []
-- check_recipients
-- out_of_scope
-- session_start
-- restart
-- trigger_handoff
-- handoff
-- human_handoff
-- help
-- nlu_fallback
+    - amount-of-money
+    - time
+    - zz_confirm_form
+  transfer_money_form:
+    ignored_intents: []
+    required_slots:
+    - AA_CONTINUE_FORM
+    - PERSON
+    - amount-of-money
+    - zz_confirm_form
+  transaction_search_form:
+    ignored_intents: []
+    required_slots:
+    - AA_CONTINUE_FORM
+    - search_type
+    - time
+    - zz_confirm_form
 entities:
 - amount-of-money
 - credit_card
@@ -43,6 +52,36 @@ entities:
 - account_type
 - handoff_to
 - search_type
+intents:
+- affirm
+- ask_transfer_charge
+- check_balance:
+    use_entities:
+    - credit_card
+    - account_type
+- check_earnings:
+    use_entities: []
+- check_human
+- check_recipients
+- deny
+- goodbye
+- greet
+- handoff
+- help
+- human_handoff
+- inform
+- nlu_fallback
+- out_of_scope
+- pay_cc:
+    use_entities: []
+- restart
+- search_transactions:
+    use_entities: []
+- session_start
+- thankyou
+- transfer_money:
+    use_entities: []
+- trigger_handoff
 slots:
   AA_CONTINUE_FORM:
     type: any
@@ -179,8 +218,8 @@ slots:
       entity: credit_card
   currency:
     type: any
-    influence_conversation: false
     initial_value: $
+    influence_conversation: false
     mappings:
     - type: custom
   end_time:
@@ -371,12 +410,12 @@ responses:
   utter_ask_transaction_search_form_time:
   - text: In which timeframe would you like to search for transactions?
   utter_ask_transaction_search_form_search_type:
-  - text: Would you like to search incoming or outgoing transactions?
-    buttons:
-    - title: Incoming (earnings)
-      payload: /inform{"search_type":"deposit"}'
-    - title: Outgoing (spending)
-      payload: /inform{"search_type":"spend"}'
+  - buttons:
+    - payload: /inform{"search_type":"deposit"}'
+      title: Incoming (earnings)
+    - payload: /inform{"search_type":"spend"}'
+      title: Outgoing (spending)
+    text: Would you like to search incoming or outgoing transactions?
   utter_no_payment_amount:
   - text: Sorry, I don't understand that payment amount.
   utter_no_paymentdate:
@@ -477,46 +516,13 @@ responses:
   utter_bot:
   - text: I'm a virtual assistant made with Rasa.
   utter_help:
-  - text: "I can help you with your financial accounts. \nYou can ask me things like: \n- What's my account balance? \n- Pay off my credit card \n- What did I spend at Target last month? \n- I need to transfer money"
-actions:
-- action_session_start
-- action_restart
-- action_show_balance
-- action_show_recipients
-- action_show_transfer_charge
-- action_handoff
-- action_handoff_options
-- action_pay_cc
-- action_transfer_money
-- action_transaction_search
-- action_ask_transaction_search_form_zz_confirm_form
-- action_switch_forms_ask
-- action_switch_forms_deny
-- action_switch_forms_affirm
-- action_switch_back_ask
-- validate_cc_payment_form
-- validate_transfer_money_form
-- validate_transaction_search_form
-forms:
-  cc_payment_form:
-    ignored_intents: []
-    required_slots:
-    - AA_CONTINUE_FORM
-    - credit_card
-    - amount-of-money
-    - time
-    - zz_confirm_form
-  transfer_money_form:
-    ignored_intents: []
-    required_slots:
-    - AA_CONTINUE_FORM
-    - PERSON
-    - amount-of-money
-    - zz_confirm_form
-  transaction_search_form:
-    ignored_intents: []
-    required_slots:
-    - AA_CONTINUE_FORM
-    - search_type
-    - time
-    - zz_confirm_form
+  - text: |-
+      I can help you with your financial accounts. 
+      You can ask me things like: 
+      - What's my account balance? 
+      - Pay off my credit card 
+      - What did I spend at Target last month? 
+      - I need to transfer money
+session_config:
+  session_expiration_time: 0
+  carry_over_slots_to_new_session: true
