--- a/actions/requirements-actions.txt
+++ b/actions/requirements-actions.txt
@@ -1,5 +1,5 @@
-python-dateutil==2.8.1
-numpy~=1.19.2
-pytz~=2019.3
+python-dateutil>=2.8.1
+numpy>1.19.2
+pytz>2019.3
 ruamel.yaml
-sqlalchemy~=1.3.22
+sqlalchemy<2.0
