--- a/config.yml
+++ b/config.yml
@@ -1,35 +1,35 @@
 version: "3.1"
 language: en
 pipeline:
-  - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: "char_wb"
-    min_ngram: 1
-    max_ngram: 4
-  - name: DIETClassifier
-    epochs: 100
-  - name: FallbackClassifier
-    threshold: 0.7
-  - name: DucklingEntityExtractor
-    url: http://localhost:8000
-    dimensions:
-    - amount-of-money
-    - time
-    - number
-  - name: SpacyNLP
-    model: "en_core_web_md"
-    case_sensitive: false
-  - name: "SpacyEntityExtractor"
+- name: WhitespaceTokenizer
+- name: RegexFeaturizer
+- name: LexicalSyntacticFeaturizer
+- name: CountVectorsFeaturizer
+- name: CountVectorsFeaturizer
+  analyzer: "char_wb"
+  min_ngram: 1
+  max_ngram: 4
+- name: DIETClassifier
+  epochs: 100
+- name: FallbackClassifier
+  threshold: 0.7
+- name: DucklingEntityExtractor
+  url: http://localhost:8000
+  dimensions:
+  - amount-of-money
+  - time
+  - number
+- name: SpacyNLP
+  model: "en_core_web_md"
+  case_sensitive: false
+- name: "SpacyEntityExtractor"
     # Note: It is not possible to use the SpacyTokenizer + SpacyFeaturizer in
     #       combination with the WhitespaceTokenizer, and as a result the
     #       PERSON extraction by Spacy is not very robust.
     #       Because of this, the nlu training data is annotated as well, and the
     #       DIETClassifier will also extract PERSON entities .
-    dimensions: ["PERSON"]
-  - name: EntitySynonymMapper
+  dimensions: ["PERSON"]
+- name: EntitySynonymMapper
 policies:
 - name: AugmentedMemoizationPolicy
 - name: TEDPolicy
@@ -37,4 +37,5 @@ policies:
 - name: RulePolicy
   core_fallback_threshold: 0.4
   core_fallback_action_name: "action_default_fallback"
-  enable_fallback_prediction: True
+  enable_fallback_prediction: true
+assistant_id: 20231122-213211-speedy-halite
