--- a/data/stories/transaction/offline_transac_add_stories.yml
+++ b/data/stories/transaction/offline_transac_add_stories.yml
@@ -10,24 +10,15 @@ stories:
     - intent: ask_add_transaction
     - action: add_transaction_form
     - active_loop: add_transaction_form
-    - intent: inform_vendor
-      entities:
-        - vendor
     - slot_was_set:
         - vendor: Nike
-    - intent: inform_money_amount
-      entities:
-        - amount-of-money
-        - currency
     - slot_was_set:
         - amount-of-money: 129
     - slot_was_set:
         - currency: euro
-    - intent: inform_date
-      entity:
-        - date
     - slot_was_set:
-        - requested_slot: date
+        - time: true
+    - active_loop: null
     - action: action_add_offline_transaction
 
 - story: Happy Path with single action
@@ -40,16 +31,15 @@ stories:
         - vendor: EliLilly
         - amount-of-money: 100
         - currency: USD
-        - transaction_type: spending
     - action: add_transaction_form
     - active_loop: add_transaction_form
-    - action: utter_ask_date
-    - intent: inform_date
-      entities:
-        - date
-    - action: action_add_offline_transaction
+    - slot_was_set:
+        - time: true
+    - active_loop:
     - slot_was_set:
         - vendor: null
-        - date: null
+        - time: null
         - amount-of-money: null
         - currency: null
+    - action: action_add_offline_transaction
+
